--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
     "vercel-build": "echo 'No build step needed'"
   },
   "dependencies": {
-    "@faker-js/faker": "^9.6.0",
-    "@supabase/supabase-js": "^2.49.4",
-    "bcrypt": "^5.1.1",
+    "@faker-js/faker": "^9.8.0",
+    "@supabase/supabase-js": "^2.50.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.2",
-    "pg": "^8.14.1",
+    "multer": "^2.0.1",
+    "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
-    "postgres": "^3.4.5",
-    "sequelize": "^6.37.6"
+    "postgres": "^3.4.7",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "nodemon": "^3.1.9",
-    "sequelize-cli": "^6.6.2"
+    "nodemon": "^3.1.10",
+    "sequelize-cli": "^6.6.3"
   }
 }
